- allow running transaction with justdb option
- fix split_length > 1 
  (eg: "urpmi --split-length 2 a b c" will only install 2 pkgs)
- spec2srcheader: workaround parseSpec returning a header where ->arch is set
  to %{_target_cpu} whereas we really want a header similar to .src.rpm
  (see #32824)

Version 1.75 - 12 August 2007, by Pascal "Pixel" Rigaux

- fix dropping tags from rpm header.
  it hasn't work since MDK8.1 and rpm 4.0. 
  it may break urpmi!! but potentially allows a much smaller hdlist.cz :)

Version 1.74 - 12 August 2007, by Pascal "Pixel" Rigaux

- sort choices per media, then per version

Version 1.73 - 11 August 2007, by Pascal "Pixel" Rigaux

- allow running transaction with replagekgs option

Version 1.72 - 10 August 2007, by Pascal "Pixel" Rigaux

- modify parse_hdlist so that partial hdlist reading can be used
  (needed when some stuff is already done in the callback)

Version 1.71 - 9 August 2007, by Pascal "Pixel" Rigaux

- compilation fixes on rpm < 4.4.8

Version 1.69 - 9 August 2007, by Pascal "Pixel" Rigaux

- "suggests" are no more handled as "requires"
- resolve_requested support "suggests": a newly suggested package is installed
  as if required (can be disabled with option no_suggests)

Version 1.68 - 3 August 2007, by Pascal "Pixel" Rigaux

- add $trans->Element_version and $trans->Element_release

Version 1.67 - 22 June 2007, by Olivier "Nanar" Thauvin

- add osscore, archscore and platformscore function to URPM
- is_platform_compat function to Pkg object
- fix call to rpm function in spec2header()
- fix some compilation warnings

Version 1.66 - 2 July 2007, by Pascal "Pixel" Rigaux

- fix --auto-select skipping some packages because of other packages providing
  a more recent version, but no obsolete between those packages.
  the fix is to revert commit from Aug 2002:
    "fixed propable old package (according provides) requested by
     request_packages_to_upgrade."

Version 1.65 - 22 June 2007, by Olivier Thauvin
